--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,9 @@ jobs:
         VNC_PASSWORD: ${{ secrets.VNC_PASSWORD }}
         Cloudflare_Tunnel_Install: ${{ secrets.Cloudflare_Tunnel_Install }}
       run: source configure.sh "$VNC_USER_PASSWORD" "$VNC_PASSWORD" "$NGROK_AUTH_TOKEN" "$Cloudflare_Tunnel_Install"
-    - name: ngrok is now listening to VNC connections on...
-      run: curl --silent http://127.0.0.1:4040/api/tunnels | jq '.tunnels[0].public_url'
+#     - name: ngrok is now listening to VNC connections on...
+#       run: curl --silent http://127.0.0.1:4040/api/tunnels | jq '.tunnels[0].public_url'
+    - name: setup cloudflare
+      run: sudo cloudflared tunnel --url tcp://127.0.0.1:5900
     - name: Setup tmate session
       uses: mxschmitt/action-tmate@v2
